--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    /* flex-flow: row wrap; */
+    flex-flow: column wrap;
     width: 90%;
 }
 
@@ -46,11 +46,11 @@ main {
     align-items: center;
     flex-flow: column wrap;
 }
-.div {
+div {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-flow: column wrap;
+    flex-flow: row wrap;
 }
 
 form {
@@ -63,12 +63,19 @@ form button {
     margin: 10px;
 }
 
+
 .square {
-    width: 150px;
-    height: 150px;
+    width: 300px;
+    height: 300px;
     background-color: yellow;
 }
-  
+
+.sm-square {
+    width: 100px;
+    height: 100px;
+    background-color: green;
+}
+
 /* .square:after {
     content: "";
     display: block;
@@ -84,4 +91,18 @@ form button {
 
 .hidden {
     display: none;
+}
+
+#mode i {
+    font-size: 2.5em;
+    padding: 10px;
+}
+
+.dark {
+    background-color: black;
+    color: white;
+}
+
+.dark h1 {
+    color: white;
 }
