--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,14 @@ h1 {
     width: 90%;
 }
 
+#previous {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+    margin-top: 50px;
+}
+
 header,
 footer {
     display: flex;
@@ -106,3 +114,4 @@ form button {
 .dark h1 {
     color: white;
 }
+
