--- a/css/styles.css
+++ b/css/styles.css
@@ -76,19 +76,27 @@ form button {
     width: 300px;
     height: 300px;
     background-color: yellow;
+    border-radius: 7px;
 }
 
 .sm-square {
     width: 100px;
     height: 100px;
     background-color: green;
+    border-radius: 7px;
+    padding: 10px;
 }
 
-/* .square:after {
-    content: "";
-    display: block;
-    padding-bottom: 100%;
-} */
+.rectangle {
+    width: 300px;
+    height: 200px;
+    background-color: transparent;
+    border-radius: 7px;
+}
+
+img {
+    border-radius: 7px;
+}
 
 #text h2 {
     font-family: 'Marck Script', cursive;
